LIN-2819/LIN-2867 :: Set focus ring to inset to prevent clipping on overflow

--- a/vaadin23/core/src/main/resources/META-INF/resources/themes/linkki/components/vaadin-date-picker.css
+++ b/vaadin23/core/src/main/resources/META-INF/resources/themes/linkki/components/vaadin-date-picker.css
@@ -6,3 +6,10 @@
 :host(:hover:not([readonly]):not([focused])) [part='input-field']::after {
     opacity: 0;
 }
+
+/*
+ * Fix for Vaadin bug
+ */
+:host([focus-ring]) [part='input-field'] {
+    box-shadow: inset 0 0 0 2px var(--lumo-primary-color-50pct);
+}
