--- a/vaadin23/core/src/main/resources/META-INF/resources/themes/linkki/components/vaadin-text-area.css
+++ b/vaadin23/core/src/main/resources/META-INF/resources/themes/linkki/components/vaadin-text-area.css
@@ -10,3 +10,10 @@
 :host([readonly]) [part='input-field'] {
     border: 1px var(--linkki-input-border-style-readonly) var(--linkki-input-border-readonly);
 }
+
+/*
+ * Fix for Vaadin bug
+ */
+:host([focus-ring]) [part='input-field'] {
+    box-shadow: inset 0 0 0 2px var(--lumo-primary-color-50pct);
+}
